--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0">
-    <title>Vite App</title>
+    <title>漂亮的老师</title>
     
     <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=DwkPt9ifSC1skP60XOKVdKnD047AF30a"></script>
 
